--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.4.0",
     "prettier": "^2.3.2"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
